# EAP-IG

./: LICENSE  README.md  animacy.py  attribute.py  attribute_mem.py  attribute_vectorized.py  attribute_vectorized_positional.py  environment.yml  evaluate_graph.py  fact-retrieval.py  graph.py  greater_than.ipynb  greater_than.py  greater_than_data.csv  greater_than_dataset.py  hypernymy.py  ioi.ipynb  ioi.py  ioi_llama.csv  pyproject.toml  requirements.txt  setup.py  utils.py
eap/: attribute.py  attribute_mem.py  attribute_node.py  attribute_vectorized_iterative.py  evaluate.py  evaluate_graph.py  graph.py  potential_nouns.txt  utils.py  virtual_graph.py  visualization.py
src/eap/: __init__.py  attribute.py  attribute_node.py  evaluate.py  graph.py  utils.py
