[project]
name = "eap"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Hanna", email = "mh2parker@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "transformer-lens>=2.15.0",
]

[project.optional-dependencies]
viz = ["pygraphviz>=1.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
